# BQSSampler

./: CMakeLists.txt  install.sh
deltaf_coeff_generator/: CMakeLists.txt  deltaf_integrals.h  main.cpp
include/: deltaf_corrections.h  globals.h  integrands.h  lrf.h  numerical_integrator.h  particle.h  particle_system.h  sampler.h  settings.h  surface.h  tables.h  tools.h
src/: main.cpp  numerical_integrator.cpp  particle.cpp  particle_system.cpp  sampler.cpp  settings.cpp  surface.cpp  tables.cpp  tools.cpp
utils/: generate_weights_and_roots.py  max.py  max_x.py  max_x_massive.py  pion_thermal.py  pion_thermal2d.py
